--- a/Treellenge/package.json
+++ b/Treellenge/package.json
@@ -20,11 +20,15 @@
     "@angular/platform-browser-dynamic": "~9.1.6",
     "@angular/router": "~9.1.6",
     "@capacitor/core": "2.1.2",
-    "@ionic-native/core": "^5.0.7",
+    "@ionic-native/camera": "^5.26.0",
+    "@ionic-native/camera-preview": "^5.26.0",
+    "@ionic-native/core": "^5.26.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/sqlite": "^5.26.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "cordova-plugin-camera": "^4.1.0",
+    "cordova-plugin-camera-preview": "^0.12.0",
     "cordova-sqlite-storage": "^5.0.0",
     "rxjs": "~6.5.1",
     "tslib": "^1.10.0",
@@ -57,7 +61,9 @@
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "cordova-sqlite-storage": {}
+      "cordova-sqlite-storage": {},
+      "cordova-plugin-camera-preview": {},
+      "cordova-plugin-camera": {}
     }
   }
 }
