--- a/Treellenge/package.json
+++ b/Treellenge/package.json
@@ -23,13 +23,18 @@
     "@ionic-native/camera": "^5.26.0",
     "@ionic-native/camera-preview": "^5.26.0",
     "@ionic-native/core": "^5.26.0",
+    "@ionic-native/http": "^4.20.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/sqlite": "^5.26.0",
     "@ionic-native/status-bar": "^5.0.0",
+    "@ionic-native/toast": "^5.26.0",
     "@ionic/angular": "^5.0.0",
     "cordova-android": "^8.1.0",
+    "cordova-plugin-advanced-http": "^2.4.1",
     "cordova-plugin-camera": "^4.1.0",
     "cordova-plugin-camera-preview": "^0.12.0",
+    "cordova-plugin-file": "^6.0.2",
+    "cordova-plugin-file-transfer": "^1.7.1",
     "cordova-sqlite-storage": "^5.0.0",
     "rxjs": "~6.5.1",
     "tslib": "^1.10.0",
@@ -78,7 +83,12 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-file": {},
+      "cordova-plugin-file-transfer": {},
+      "cordova-plugin-advanced-http": {
+        "OKHTTP_VERSION": "3.10.0"
+      }
     },
     "platforms": [
       "android"
